--- a/force-app/main/default/classes/CQUI_AS_Test_Filter_Products.cls
+++ b/force-app/main/default/classes/CQUI_AS_Test_Filter_Products.cls
@@ -1,8 +1,11 @@
 @isTest
 public class CQUI_AS_Test_Filter_Products {
-
+    
+    Private static user testuser;
+    
     // Helper method to create a user with a specific permission set
-        private static User createUserWithPermissionSet() {
+    @testSetup
+    static void createUserWithPermissionSet() {
         // Retrieve the desired permission set by name
         PermissionSet ps = [SELECT Id FROM PermissionSet WHERE Name = 'CQ_AS_Common_Permission_Set' LIMIT 1];
         
@@ -10,7 +13,7 @@ public class CQUI_AS_Test_Filter_Products {
         Profile p = [SELECT Id FROM Profile WHERE Name = 'Standard User' LIMIT 1]; 
         
         // Create a new user with specified attributes
-        User u = new User(
+        testUser = new User(
             ProfileId = p.Id,
             Alias = 'ashar',
             Email = 'aditya0211sh@gmail.com',
@@ -23,25 +26,26 @@ public class CQUI_AS_Test_Filter_Products {
         );
         
         // Insert the user and assign the permission set
-        insert u;
+        insert testUser;
         PermissionSetAssignment psa = new PermissionSetAssignment(
-            AssigneeId = u.Id,
+            AssigneeId = testUser.Id,
             PermissionSetId = ps.Id
         );
         insert psa;
         
-        return u;  // Return the created user
+        
     }
-
+    
     // Test method to validate filtering products based on search term and part family
     @isTest
-    static void testGetRecords() {
+    static void givenPartFamily_WhenEnter_ThenAssertFilter() {
         // Run the test as a specific user with appropriate permissions
-        System.runAs(createUserWithPermissionSet()) {
+        user test=[select id , username from user where UserName = 'aditya0211sh@fmail.com' LIMIT 1];
+        System.runAs(test) {
             // Setup Part Family test data
             compliancequest__SQX_Part_Family__c partFamily = new compliancequest__SQX_Part_Family__c(Name = 'TestFamily');
             insert partFamily;
-
+            
             // Setup SQX Part test data
             compliancequest__SQX_Part__c part1 = new compliancequest__SQX_Part__c(
                 Name = 'TestPart1',
@@ -50,26 +54,26 @@ public class CQUI_AS_Test_Filter_Products {
                 compliancequest__Part_Risk_Level__c = 5,
                 compliancequest__Part_Family__c = partFamily.Id // Assigning the Part Family to the Part
             );
-
+            
             insert part1;
-
+            
             // Test with searchTerm and part family
             Map<String, Object> currentRecord = new Map<String, Object> {
                 'CQ_AS_SQX_Part_Family__c' => part1.compliancequest__Part_Family__c
-            };
-            List<SObject> result = CQUI_AS_Filter_Products_By_ProductFamily.getRecords(currentRecord, 'TestPart1');
+                    };
+                        List<SObject> result = CQUI_AS_Filter_Products_By_ProductFamily.getRecords(currentRecord, 'TestPart1');
             System.assertEquals(1, result.size(), 'Expected one record');
-
+            
             // Test with searchTerm but without part family
             currentRecord.put('CQ_AS_SQX_Part_Family__c', null);
             result = CQUI_AS_Filter_Products_By_ProductFamily.getRecords(currentRecord, 'TestPart1');
             System.assertEquals(0, result.size(), 'Expected zero records without part family');
-
+            
             // Test without searchTerm but with part family
             currentRecord.put('CQ_AS_SQX_Part_Family__c', part1.compliancequest__Part_Family__c);
             result = CQUI_AS_Filter_Products_By_ProductFamily.getRecords(currentRecord, '');
             System.assertEquals(1, result.size(), 'Expected one record without searchTerm');
-
+            
             // Test without currentRecord
             result = CQUI_AS_Filter_Products_By_ProductFamily.getRecords(null, 'TestPart1');
             System.assertEquals(0, result.size(), 'Expected zero records without currentRecord');
